app/assets/stylesheets/DocumentSet/show/app.less
@import "../../mixins.less";
@import "./_variables.less";

// We put all major layout stuff in one file, to match the one HTML template

#tree-app-left {
  .box-sizing(border-box);
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  width: 50%;
  border: 5px solid transparent;
  z-index: 2; // hover descriptions go above everything
  display: flex;
  flex-direction: column;
}

#tree-app-right {
  .box-sizing(border-box);
  position: absolute;
  top: 0;
  right: 0;
  left: 50%;
  bottom: 0;
  margin: 5px;
}

#tree-app-tree {
  flex-grow: 1;
}

.search-disabled #tree-app-left-middle {
  top: 0;
}

#tree-app-zoom-slider {
  position: relative;
  height: @focus_height;
}

#tree-app-tags {
  max-height: 50%; // for huge tag list
  overflow: auto;
  overflow-x: hidden;
  overflow-y: auto;
}

#tree-app-search {
  // NOT absolute
  margin: 0 -5px 5px;
}

#tree-app-document-list {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
}

#tree-app-document {
  position: absolute;
  left: 0;
  right: 0;
  bottom: -100%;
  height: @defaultDocumentHeight;
  .transition(bottom .35s ease-out);
}

